[tool.poetry]
name = "flyte-agent"
version = "0.1.0"
description = ""
authors = ["Thomas Maschler <thomas.maschler@planet.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
flytekit = "^1.13.5"
pandas = "^2.2.2"
prometheus-client = "^0.20.0"
grpcio-health-checking = "^1.66.1"
pyarrow = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
